force-app/src/objects/c2g__PaymentDetailsTemplate__c.object
<CustomObject>
    <customHelpPage>c2g__codahelppaymentdetailstemplate</customHelpPage>
    <description>Stores template details from the Payments Plus process.</description>
    <fields>
        <fullName>c2g__BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>c2g__codaBankAccount__c</referenceTo>
        <relationshipLabel>Payment Details Templates</relationshipLabel>
        <relationshipName>PaymentDetailsTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CurrencyWriteOffDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency Write-Off Dimension 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension1__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Payment Details Templates (Currency Write-Off Dimension 1)</relationshipLabel>
        <relationshipName>PaymentDetailsTemplatesCWODimension1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CurrencyWriteOffDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency Write-Off Dimension 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension2__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Payment Details Templates (Currency Write-Off Dimension 2)</relationshipLabel>
        <relationshipName>PaymentDetailsTemplatesCWODimension2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CurrencyWriteOffDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency Write-Off Dimension 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension3__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Payment Details Templates (Currency Write-Off Dimension 3)</relationshipLabel>
        <relationshipName>PaymentDetailsTemplatesCWODimension3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CurrencyWriteOffGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency Write-Off GLA</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Payment Details Templates</relationshipLabel>
        <relationshipName>PaymentDetailsTemplatesCWOGLA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CurrencyWriteOffLossGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The currency exchange loss GLA. Required for some countries where currency gains and losses must be differentiated.</description>
        <inlineHelpText>Any currency write-off loss created by the matching process is posted to this GLA.</inlineHelpText>
        <label>Currency Write-Off Loss GLA</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Payment Details Templates</relationshipLabel>
        <relationshipName>PaymentDetailsTemplatesCWOLossGLA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__LocalClearingSystem__c</fullName>
        <description>Specifies the local clearing system for domestic outbound payments based on the payment currency.</description>
        <label>Local Clearing System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>FEDWIRE</fullName>
                </value>
                <value>
                    <fullName>FASTER_PAYMENTS</fullName>
                </value>
                <value>
                    <fullName>BPAY</fullName>
                </value>
                <value>
                    <fullName>BANK_TRANSFER</fullName>
                </value>
                <value>
                    <fullName>FPS</fullName>
                </value>
                <value>
                    <fullName>RTGS</fullName>
                </value>
                <value>
                    <fullName>FAST</fullName>
                </value>
                <value>
                    <fullName>GIRO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Payment Details Templates</relationshipLabel>
        <relationshipName>PaymentDetailsTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Payment Details Templates</relationshipLabel>
        <relationshipName>PaymentDetailsTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentDestination__c</fullName>
        <description>Specifies the outbound payment destination.</description>
        <label>Payment Destination</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__PaymentMediaTypes__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__SettlementDiscountDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Settlement Discount Dimension 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension1__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Payment Details Templates (Settlement Discount Dimension 1)</relationshipLabel>
        <relationshipName>PaymentDetailsTemplatesSDDimension1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SettlementDiscountDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Settlement Discount Dimension 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension2__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Payment Details Templates (Settlement Discount Dimension 2)</relationshipLabel>
        <relationshipName>PaymentDetailsTemplatesSDDimension2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SettlementDiscountDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Settlement Discount Dimension 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension3__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Payment Details Templates (Settlement Discount Dimension 3)</relationshipLabel>
        <relationshipName>PaymentDetailsTemplatesSDDimension3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SettlementDiscountGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Settlement Discount GLA</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Payment Details Templates</relationshipLabel>
        <relationshipName>PaymentDetailsTemplatesSDGLA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SplitInvoiceForSeparatePayments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Select Invoices for Separate Payments</label>
        <type>Checkbox</type>
    </fields>
    <label>Payment Details Template</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <columns>c2g__Default__c</columns>
        <columns>c2g__BankAccount__c</columns>
        <columns>c2g__PaymentMediaTypes__c</columns>
        <columns>c2g__PaymentCurrency__c</columns>
        <columns>c2g__SettlementDiscountGLA__c</columns>
        <columns>c2g__CurrencyWriteOffGLA__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payment Details Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Details Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>